# realmate-challenge

./: .gitignore  Dockerfile  INSTRUCTIONS.MD  docker-compose.yml  pyproject.toml
src/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/conversation/: constants.py  handlers.py  models.py  repository.py  serializers.py  tasks.py  urls.py  views.py
src/conversation/migrations/: 0001_initial.py
src/conversation/tests/: test_handlers.py  test_repository.py  test_tasks.py
